--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,8 @@
                         <button id="send-btn" class="send-button">
                             ✉️ 发送
                         </button>
-                        <button id="reset-btn" class="send-button">
-                            🔄 新对话
-                        </button>
+                        <button id="reset-btn" class="send-button">🔄 新对话</button>
+                        <button id="end-btn" class="send-button" style="display:none;">👋 结束对话</button>
                     </div>
                 </div>
                 
